Anonymous | Login | 2021-01-24 06:37 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031037 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2019-10-05 23:28 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031037: Foundation Classes - add class Message_PrinterSystemLog for printing messages into system log | ||||||||
Description | Sometimes it is useful writing messages into system log instead of console or application message log. One of use cases is Android platform, where console output (std::cout / std::cerr) goes nowhere or GUI applications in Windows. New class Message_PrinterSystemLog can be used for logging messages into system log for debugging application in restricted environment. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|
(0087878) git (administrator) 2019-10-05 23:37 |
Branch CR31037 has been created by kgv. SHA-1: 30db93d068a50d2f24e8d20473457fdfb3b076be Detailed log of new commits: Author: kgv Date: Sat Oct 5 23:34:35 2019 +0300 0031037: Foundation Classes - add class Message_PrinterSystemLog for printing messages into system log |
(0087879) git (administrator) 2019-10-06 00:09 |
Branch CR31037 has been updated forcibly by kgv. SHA-1: c9b7c9b3b58270afdacb97ab53af45b06a712bd2 |
(0087880) kgv (developer) 2019-10-06 00:33 |
Patch is ready for review. |
(0087933) abv (manager) 2019-10-08 06:26 |
No remarka, please integrate |
(0088368) apn (administrator) 2019-10-20 21:35 |
There are following compilation errors: Ubuntu-1604-32/64-Android-opt: /dn54/builds/IR-2019-10-20_IR-2019-10-20/Ubuntu-1604-32-Android-opt/OCCT/src/Message/Message_PrinterSystemLog.cxx:128: error: undefined reference to '__android_log_write' /dn54/builds/IR-2019-10-20_IR-2019-10-20/Ubuntu-1604-32-Android-opt/OCCT/src/Message/Message_PrinterSystemLog.cxx:150: error: undefined reference to '__android_log_write' clang++: error: linker command failed with exit code 1 (use -v to see invocation) Windows-32/64-VC14-uwp: http://jenkins-test-08.nnov.opencascade.com/view/IR-2019-10-20_IR-2019-10-20/view/OCCT%20compile/job/IR-2019-10-20_IR-2019-10-20-OCCT-Windows-32-VC14-uwp-opt-compile/1/parsed_console/ [^] http://jenkins-test-08.nnov.opencascade.com/view/IR-2019-10-20_IR-2019-10-20/view/OCCT%20compile/job/IR-2019-10-20_IR-2019-10-20-OCCT-Windows-64-VC14-uwp-opt-compile/1/parsed_console/ [^] |
(0088375) git (administrator) 2019-10-21 09:44 |
Branch CR31037 has been updated by kgv. SHA-1: 8518f9e8e09ceee7326716512b7844545e3cc976 Detailed log of new commits: Author: kgv Date: Mon Oct 21 09:43:14 2019 +0300 # Add -log to TKernel dependencies on Android. # Handle OCCT_UWP within Message_PrinterSystemLog. |
(0088376) kgv (developer) 2019-10-21 09:45 edited on: 2019-10-21 09:45 |
Please check building of updated patch on Android and UWP. |
(0088418) git (administrator) 2019-10-22 14:05 |
Branch CR31037 has been updated forcibly by apn. SHA-1: 501195f46349e4bb5546d32f9d0706df6a6fe8d1 |
(0088481) git (administrator) 2019-10-23 11:51 |
Branch CR31037 has been deleted by kgv. SHA-1: 501195f46349e4bb5546d32f9d0706df6a6fe8d1 |
![]() |
|||
occt: master a6a66c3a
Timestamp: 2019-10-05 20:34:35 Author: kgv Committer: apn [ Details ] [ Diff ] |
0031037: Foundation Classes - add class Message_PrinterSystemLog for printing messages into system log Added new class Message_PrinterSystemLog that can be used for logging messages into system log for debugging application in restricted environment. |
||
mod - adm/cmake/occt_csf.cmake | [ Diff ] [ File ] | ||
mod - adm/genproj.tcl | [ Diff ] [ File ] | ||
mod - src/Message/FILES | [ Diff ] [ File ] | ||
add - src/Message/Message_PrinterSystemLog.cxx | [ Diff ] [ File ] | ||
add - src/Message/Message_PrinterSystemLog.hxx | [ Diff ] [ File ] | ||
mod - src/TKernel/EXTERNLIB | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-05 23:28 | kgv | New Issue | |
2019-10-05 23:28 | kgv | Assigned To | => abv |
2019-10-05 23:33 | kgv | File Added: draw_sys_log.png | |
2019-10-05 23:37 | git | Note Added: 0087878 | |
2019-10-06 00:09 | git | Note Added: 0087879 | |
2019-10-06 00:13 | kgv | File Added: draw_syslog_linux.png | |
2019-10-06 00:33 | kgv | Note Added: 0087880 | |
2019-10-06 00:33 | kgv | Status | new => resolved |
2019-10-08 06:26 | abv | Note Added: 0087933 | |
2019-10-08 06:26 | abv | Assigned To | abv => bugmaster |
2019-10-08 06:26 | abv | Status | resolved => reviewed |
2019-10-20 21:35 | apn | Note Added: 0088368 | |
2019-10-20 21:36 | apn | Test case number | => Not needed |
2019-10-20 21:36 | apn | Assigned To | bugmaster => kgv |
2019-10-20 21:36 | apn | Status | reviewed => assigned |
2019-10-21 09:44 | git | Note Added: 0088375 | |
2019-10-21 09:45 | kgv | Note Added: 0088376 | |
2019-10-21 09:45 | kgv | Assigned To | kgv => bugmaster |
2019-10-21 09:45 | kgv | Status | assigned => resolved |
2019-10-21 09:45 | kgv | Status | resolved => reviewed |
2019-10-21 09:45 | kgv | Note Edited: 0088376 | View Revisions |
2019-10-22 14:05 | git | Note Added: 0088418 | |
2019-10-23 01:07 | apn | Changeset attached | => occt master a6a66c3a |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | reviewed => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088481 | |
2019-11-29 11:41 | kgv | Relationship added | parent of 0031206 |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |