0031037: Foundation Classes - add class Message_PrinterSystemLog for printing messages into system log

Added new class Message_PrinterSystemLog that can be used for logging messages into system log for debugging application in restricted environment.